# Coffee_Shop_ChatBot

./: .gitignore  Dockerfile  PROJECT_ROADMAP.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  temp.ipynb
App/: app.py  chatbot.py  (+2 more)
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  stress_test.py  test_mem0_connection.py  test_persistence.py
backend/api/: chatbot.py  config.py  main.py  schemas.py
backend/api/auth/: __init__.py  aws_auth.py  base.py  supabase_auth.py
backend/api/routers/: __init__.py  admin.py  auth.py  chat.py  orders.py  products.py  users.py
backend/artifacts/: hybrid_recommender.joblib
backend/data/: schema_metadata.json
backend/data/products_data/: Merrys_way_about_us.txt  menu_items_text.txt  products.jsonl
backend/scripts/: generate_more_products.py  index_metadata.py  initialize_bi_agent.py  migrate_images.py  reseed_prices.py  seed_products.py  setup_admin_memory.py  setup_storage.py
backend/scripts/ml/: train.py
backend/src/: __init__.py  config.py  main.py  rag_pipeline.py  rules_basket.pkl
backend/src/agents/: __init__.py  classification_agent.py  details_agent.py  guard_agent.py  order_taking_agent.py  order_update.py  reccomendation_agent.py
backend/src/agents/admin_agent/: agent.py
backend/src/graph/: coffee_shop_graph.py  graph.py  state.py  states.py
backend/src/memory/: __init__.py  extractor.py  load_memory.py  mem0_manager.py  memory_manager.py  schemas.py  summary_buffer.py  summary_memory.py  supabase_client.py
backend/src/nodes/: chat_summary_node.py  classification_node.py  details_node.py  gaurd_node.py  memory_node.py  order_node.py  query_rewrite_node.py  recommendation_node.py  response_node.py  update_order_node.py
backend/src/orders/: __init__.py  order_manager.py
backend/src/prompts/: __init__.py  classification_prompt.py  gaurd_prompt.py  memory_prompts.py  query_rewrite_prompt.py  response_prompt.py
backend/src/rag/: retriever.py  vector_db_setup.py
backend/src/recommender/: __init__.py  hybrid_recommender.py
backend/src/schemas/: agents_schemas.py  state_schema.py
backend/src/sessions/: __init__.py  session_manager.py
backend/src/tools/: __init__.py  about_us.py  availability.py  get_price.py  product_info.py  rag_retriever.py  retriever_tool.py  schemas.py
backend/src/utils/: __init__.py  email_util.py  load_memory.py  logger.py  memory_manager.py  summary_memory.py  util.py
backend/src/vector_db/: build_PC_DB.ipynb
backend/supabase/: schema.sql
(+172 files in other folders)
