[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "fastapi[standard]>=0.128.4",
    "greenlet>=3.3.1",
    "langchain>=1.2.9",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-pinecone>=0.2.0",
    "langgraph>=1.0.8",
    "pandas<3.0.0",
    "pinecone>=6.0.0,<8.0.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "supabase>=2.27.3",
]
