[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.4",
    "greenlet>=3.3.1",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-pinecone>=0.2.0",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mem0ai>=1.0.11",
    "pandas<3.0.0",
    "pinecone>=6.0.0,<8.0.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary,pool]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "supabase>=2.27.3",
    "uvicorn>=0.40.0",
]
